--- a/config/database.yml
+++ b/config/database.yml
@@ -5,7 +5,7 @@ development:
 #  database: db/development.sqlite3
 #  pool: 5
 #  timeout: 5000
-  adapter: mysql
+  adapter: mysql2
   database: staffing_development
   user: root
 
@@ -13,8 +13,9 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test: &TEST
-  adapter: sqlite3
-  database: db/test.sqlite3
+  adapter: mysql2
+  database: staffing_test
+  user: root
   pool: 5
   timeout: 5000
 
@@ -26,3 +27,4 @@ production:
 
 cucumber:
   <<: *TEST
+
