--- a/config/database.yml
+++ b/config/database.yml
@@ -7,7 +7,7 @@ development:
 #  timeout: 5000
   adapter: mysql2
   database: staffing_development
-  user: root
+  username: root
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -15,7 +15,7 @@ development:
 test: &TEST
   adapter: mysql2
   database: staffing_test
-  user: root
+  username: root
   pool: 5
   timeout: 5000
 
